# ChangeLog for sci-libs/openfoam-utilities
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Jul 2008; Oliver Borm (boroli) <oli.borm@web.de>
  openfoam-utilities-1.5.ebuild:
  Removed unnecessary variable declaration

  28 Jul 2008; Oliver Borm (boroli) <oli.borm@web.de>
  openfoam-utilities-1.5.ebuild:
  Fixed some errors due to wrong relative paths.

  26 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org>
  openfoam-utilities-1.5.ebuild:
  Fix unnecessary quoting

  22 Jul 2008; Oliver Borm (boroli) <oli.borm@web.de>
  +openfoam-utilities-1.5.ebuild, +files/OpenFOAM-1.5-compile.patch:
  Version bump to 1.5

  22 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  openfoam-utilities-1.4.1_p20080328.ebuild:
  Fix dep

  21 Apr 2008; Oliver Borm (boroli) <oli.borm@web.de>
  openfoam-utilities-1.4.1_p20080328.ebuild:
  Fixed some minor dependency problems.

  30 Mar 2008; Thomas Sachau (Tommy[D]) tommy@gentoo.org
  -openfoam-utilities-1.4.1_p20080118.ebuild,
  -files/openfoam-utilities-compile-1.4.1_p20080118.patch,
  -files/openfoam-utilities-1.4.1_p20080118.patch:
  Drop old version

  28 Mar 2008; Oliver Borm (boroli) <oli.borm@web.de>
  +openfoam-utilities-1.4.1_p20080328.ebuild,
  +files/openfoam-utilities-1.4.1_p20080328.patch,
  +files/openfoam-utilities-compile-1.4.1_p20080328.patch:
  sci-libs/parmetis in portage requires new dependencies

  29 Jan 2008; Oliver Borm (boroli) <oli.borm@web.de>
  +files/openfoam-utilities-compile-1.4.1_p20080118.patch,
  +files/openfoam-utilities-1.4.1_p20080118.patch, +metadata.xml,
  +openfoam-utilities-1.4.1_p20080118.ebuild:
  New Ebuild for the OpenFOAM utilities
